[gd_scene load_steps=4 format=3 uid="uid://2yq0ne3dvbba"]

[ext_resource type="Script" uid="uid://dnd74ka7hb6pe" path="res://dec-7-2025-citybuilder-cards-only/item_card.gd" id="1_itemcard"]
[ext_resource type="Texture2D" uid="uid://d20xr7os4xido" path="res://assets/icon_atlas.png" id="2_6kc0x"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rouse"]
atlas = ExtResource("2_6kc0x")
region = Rect2(40, 40, 288, 288)

[node name="ItemCard" type="PanelContainer"]
custom_minimum_size = Vector2(200, 260)
script = ExtResource("1_itemcard")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Name" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Peasants x10"
horizontal_alignment = 1

[node name="IconContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="Icon" type="TextureRect" parent="MarginContainer/VBoxContainer/IconContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = SubResource("AtlasTexture_rouse")
expand_mode = 1
stretch_mode = 5

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Tier" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "Basic"

[node name="Tags" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "Structure"
horizontal_alignment = 2

[node name="Description" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 18
text = "Description goes here and can wrap to multiple lines."
autowrap_mode = 3

[node name="Amount" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "x10"
horizontal_alignment = 2

[node name="UseButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Use"

[node name="PickupButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Pick Up"
